--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
     <script src="js/app/helpers/DateHelper.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/services/NegociacaoService.js"></script>
+    <script src="js/app/services/HttpService.js"></script>
     <script>
         let negociacaoController = new NegociacaoController();
     </script>
