--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <title>Lista de Negociações</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
+
+    <script src="js/app/polyfill/es6.js"></script>
     
 </head>
 <body class="container">
